Fix red background rectangle size behind title Fix p5js mobile dot generation

--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -18,8 +18,8 @@
 	  &--who-am-i{
 		&.marked{
 		  &:before{
-			right: .5rem;
-			width: 7rem;
+			right: 0;
+			width: 7.5rem;
 			@include media($sm-min-width){
 			  width: 12rem;
 			}
